--- a/SQLiteParser/SQLiteParser.csproj
+++ b/SQLiteParser/SQLiteParser.csproj
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Antlr4.4.1.0-alpha003\build\Antlr4.props" Condition="Exists('..\packages\Antlr4.4.1.0-alpha003\build\Antlr4.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
- 
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -15,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
-	<OutputPath>bin\$(Configuration)\</OutputPath>
+    <OutputPath>bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,19 +41,24 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <Antlr4 Include="SQLiteParserSimple.g4">
       <Generator>MSBuild:Compile</Generator>
       <CustomToolNamespace>Outercurve.SQLiteParser</CustomToolNamespace>
       <Listener>False</Listener>
     </Antlr4>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Antlr4.4.1.0-alpha003\build\Antlr4.targets" Condition="Exists('..\packages\Antlr4.4.1.0-alpha003\build\Antlr4.targets')" />
+  <PropertyGroup>
+    <Antlr4BuildTaskPath>$(ProjectDir)\antlr\build\</Antlr4BuildTaskPath>
+    <!-- Path to the ANTLR tool itself -->
+    <Antlr4ToolPath>$(ProjectDir)\antlr\tools\antlr4-csharp-4.1-SNAPSHOT-complete.jar</Antlr4ToolPath>
+    <Antlr4JavaBinPath>$(SolutionDir)\packages\IKVM-WithExes.7.3.4830.1\tools\ikvm.exe</Antlr4JavaBinPath>
+  </PropertyGroup>
+  <Import Project="$(ProjectDir)\antlr\build\Antlr4.v4.0.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
 	   
