--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,7 @@ ClientBin/
 *.[Pp]ublish.xml
 *.pfx
 *.publishsettings
+*.DotSettings*
 
 # RIA/Silverlight projects
 Generated_Code/
@@ -132,6 +133,7 @@ UpgradeLog*.htm
 # SQL Server files
 App_Data/*.mdf
 App_Data/*.ldf
+
 
 # =========================
 # Windows detritus
