--- a/SQLiteParseTreeCreator/SQLiteParseTreeCreator.csproj
+++ b/SQLiteParseTreeCreator/SQLiteParseTreeCreator.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{3DF3ED3E-9ACC-4BA2-ABA6-F3728DC2B7A6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SQLiteParseTreeCreator</RootNamespace>
-    <AssemblyName>SQLiteParseTreeCreator</AssemblyName>
+    <RootNamespace>Outercurve.SQLiteCreateTree</RootNamespace>
+    <AssemblyName>Outercurve.SQLiteCreateTree</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -23,7 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\SQLiteParseTreeCreator.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\Outercurve.SQLiteCreateTree.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
