Huge set of changes

--- a/SQLiteParseTreeCreator/SQLiteParseTreeCreator.csproj
+++ b/SQLiteParseTreeCreator/SQLiteParseTreeCreator.csproj
@@ -66,11 +66,15 @@
     <Compile Include="AlterTable\Action\SchemaUtils.cs" />
     <Compile Include="AlterTable\Action\TableCommand.cs" />
     <Compile Include="AlterTable\AlterTableAdapter.cs" />
-    <Compile Include="AlterTable\IndexWriter.cs" />
     <Compile Include="AlterTable\NativeAlterTableProcessor.cs" />
     <Compile Include="AlterTable\SimulatedAlterTableProcessor.cs" />
+    <Compile Include="AlterTable\StatementCreationUtil.cs" />
     <Compile Include="CollectionExtensions.cs" />
+    <Compile Include="DbUtils.cs" />
     <Compile Include="ILogicalParseTreeVisitor.cs" />
+    <Compile Include="InvalidColumnException.cs" />
+    <Compile Include="InvalidForeignKeyException.cs" />
+    <Compile Include="InvalidIndexException.cs" />
     <Compile Include="Nodes\ColumnConstraint\CheckConstraintNode.cs" />
     <Compile Include="Nodes\ColumnConstraint\CollateConstraintNode.cs" />
     <Compile Include="Nodes\ColumnConstraint\ColumnConstraintNode.cs" />
@@ -95,6 +99,7 @@
     <Compile Include="Nodes\TableConstraint\TableConstraintForeignKeyNode.cs" />
     <Compile Include="Nodes\TableConstraint\TableConstraintNode.cs" />
     <Compile Include="Nodes\TypeNameNode.cs" />
+    <Compile Include="ParseException.cs" />
     <Compile Include="SQLiteParseTreeNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLiteParseVisitor.cs" />
