--- a/SQLiteParser/packages.config
+++ b/SQLiteParser/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr4.Runtime" version="4.1.0-alpha003" targetFramework="net40"/>
+  <package id="Antlr4" version="4.5-alpha003" targetFramework="net4" developmentDependency="true" />
+  <package id="Antlr4.Runtime" version="4.5-alpha003" targetFramework="net4" />
 </packages>
